--- a/fancifymytext.html
+++ b/fancifymytext.html
@@ -8,7 +8,13 @@
 
 	<body style="overscroll-behavior-x: auto;">
 		<h1>Fancify my Text</h1>
+
+		<!-- Your UI controls go here -->
 		
+		<fieldset style="border: 1px solid;">
+        		<legend>Text</legend>
+        		<textarea id="textInput" rows="4" cols="30"></textarea>
+    		</fieldset>
 
 		<!-- Your UI controls go here -->
 	</body>
